# devboot

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.agent/skills/: add-detection.md  add-feature.md  build.md  release.md  styling.md
.github/: FUNDING.yml
src/: App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  detector.rs  lib.rs  main.rs  process_manager.rs  startup.rs
src/components/: AddProject.css  AddProject.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ErrorBoundary.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  Terminal.css  Terminal.tsx  Toast.css  Toast.tsx
src/data/: templates.ts
src/hooks/: useProjects.ts
src/types/: index.ts
