[package]
name = "devboot"
version = "1.0.2"
description = "GitBash Management App - Auto-run projects on startup"
authors = ["DevBoot Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tang-vu/devboot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devboot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"
tauri-plugin-dialog = "2.5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
